<resources>
    <string name="app_name">Flex ESD Inpassering</string>
    <string name="error_bluetooth_le_not_supported">Bluetooth LE not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>
    <string name="error_bluetooth_provider_not_found">Bluetooth provider not found</string>
    <string name="error_external_storage_not_available">External storage not available for read and write</string>
    <string name="terminal">Terminal:</string>
    <string name="scan">Scan</string>
    <string name="list">List</string>
    <string name="disconnect">Disconnect</string>
    <string name="protocol">Protocol:</string>
    <string name="t0">T=0</string>
    <string name="t1">T=1</string>
    <string name="control_code">Control Code:</string>
    <string name="script">Script:</string>
    <string name="select_file">Select File</string>
    <string name="transmit">Transmit</string>
    <string name="control">Control</string>

    <!-- Settings -->
    <string name="pref_title_transmit_options">Transmit Options</string>
    <string name="pref_title_t0_get_response">GET RESPONSE for T=0</string>
    <string name="pref_title_t1_get_response">GET RESPONSE for T=1</string>
    <string name="pref_title_t1_strip_le">Strip Le for T=1</string>
    <string name="pref_summary_get_response">
        Issue a GET RESPONSE command using SW2 as the Le field if 61 XX is received and reissue the
        command using SW2 as the Le field if 6C XX is received.
    </string>
    <string name="pref_summary_strip_le">Strip Le field from command APDU.</string>

    <!-- Terminal types -->
    <string name="select_terminal_type">Select a terminal type</string>
    <string-array name="terminal_types_array">
        <item>ACR3901U-S1/ACR3901T-W1</item>
        <item>ACR1255U-J1</item>
        <item>AMR220-C</item>
        <item>ACR1255U-J1 V2</item>
    </string-array>

    <!-- Master key -->
    <string name="set_master_key">Set Master Key</string>
    <string name="use_default_key">Use Default Key</string>
    <string name="hint_new_key">Enter new key in HEX characters</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Battery status -->
    <string name="get_battery_status">Get Battery Status</string>

    <!-- Battery level -->
    <string name="title_activity_view_previous_esd">ViewPreviousESDActivity</string>

    <string name = "ShowOldEsdChecks">Visa Gamla Esd Tester</string>
    <string name = "NewEsdCheck">Nytt Esd Test</string>
    <string name = "LogOut">Logga Ut</string>
    <string name ="Hide">Göm</string>
    <string name = "Show">Visa</string>
    <string name = "ScanCard">Skanna Kortet</string>
    <string name = "ConnectingToCardReader">Kopplar till kortläsaren</string>
    <string name="title_settings">Inställningar</string>
    <string name="get_battery_level">Hämta batterinivå</string>
    <string name="esd_control">ESD test</string>
    <string name="pass">Godkänt</string>
    <string name="fail">Icke godkänt</string>
    <string name="register">Registrera</string>
    <string name="new_card_detected">Nytt kort detekterat</string>
    <string name="please_enter_name">Fyll i ditt namn</string>
    <string name="first_name">Namn</string>
    <string name="last_name">Efternamn</string>
    <string name="test_backend">Testa backend och auth</string>
    <string name="backend_username">Backend användarnamn</string>
    <string name="backend_password">Backend lösenord</string>
    <string name="save_and_restart">Spara och starta om</string>
    <string name="test_auth">Testa autentisering</string>
    <string name="prevesd_welcome">Här kan du se dina föregående ESD testresultat.\nGrön=Godkänd\nRöd=Icke Godkänd</string>
    <string name="main_welcome">Välkommen, %1s!</string>
    <string name="language">Language</string>
    <string name="permissionTitle">Location Permission Behövs</string>
    <string name="permissionExplanation">Appen kan inte koppla sig med kortläsaren utan location runtime permissions</string>
    <string name="allow">Tillåt</string>
    <string name="deny">Neka</string>
    <string name="DontShowTitle">Visa inte igen</string>
    <string name="DontShowExplanaition">Eftersom du har valt "visa inte igen" så kommer du behöva manuellt ge denna app course location runtime permission ifall du vill använda kortläsaren.</string>
    <string name ="UnableToAcquireToken">Kunde inte få en authenticate token infrån databasen</string>
</resources>
