<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright (C) 2018 Advanced Card Systems Ltd. All rights reserved.

    This software is the confidential and proprietary information of Advanced
    Card Systems Ltd. ("Confidential Information").  You shall not disclose such
    Confidential Information and shall use it only in accordance with the terms
    of the license agreement you entered into with ACS.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal"
            android:textSize="18sp" />

        <Space
            android:layout_width="5sp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/dialog_master_key_terminal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/dialog_master_key_use_default_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/use_default_key" />

    <EditText
        android:id="@+id/dialog_master_key_new_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:hint="@string/hint_new_key"
        android:inputType="textCapCharacters" />
</LinearLayout>
